--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -3,7 +3,8 @@ server: http://localhost:4224
 load:
  - sinon/sinon-1.3.1.js
  - formerly.js
+ 
+test:
  - tests/*.js
 
-
-timeout: 180
+timeout: 90
